# lds-datasets

./: .gitattributes  .gitignore  README.md  building_subset.json  building_subset_2.json  buildings.json  pyproject.toml  single_building.json  stakes_by_country.json
meetinghouses/: README.md  main.py  schema.py
src/lds_datasets/: logging.py
src/lds_datasets/db/: duckdb.py
src/lds_datasets/meetinghouses/: README.md  buildings.py
src/lds_datasets/temples/: all_temple_ids.json  analyze.py  data_model.json  global_month_data.json  monthly_data.json  scraper.py  sorted_lists.json  temple_scheduling.json
src/lds_datasets/units/: analysis.py  schemas.py  units.py
