[tool.poetry]
name = "lds-datasets"
version = "0.1.0"
description = ""
authors = ["Travis Chambers <tjchambers32@gmail.com>"]
license = "CC0 1.0 Universal"
readme = "README.md"
packages = [{include = "lds_datasets"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
