[tool.poetry]
name = "lds-datasets"
version = "0.1.0"
description = ""
authors = ["Travis Chambers <tjchambers32@gmail.com>"]
license = "CC0 1.0 Universal"
readme = "README.md"
packages = [{ include = "lds_datasets" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.1.1"
structlog = "^23.1.0"

[tool.poetry.group.dev-dependency.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
rich = "^13.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
